sentiment-chart/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
  labels:
    app: model-svc
spec:
  selector:
    app: model-service
  ports:
    - name: http
      port: 8000
      targetPort: 8000
