sentiment-chart/templates/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app
spec:
  host: app
  subsets:
  - name: v1
    labels:
      { app: app, version: v1 }
  - name: v2
    labels:
      { app: app, version: v2 }
